--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
     <div class="members-wrapper">
         <div class="container">
+            <h1 class="wrapper-title">隊員のご紹介</h1>
             <div class="member member-yuto">
                 <!--<div class="innner"></div>-->
             </div>
